# canvas_parent_api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
src/canvas_parent_api/: __init__.py  base.py  canvas.py  canvas_api_client.py
src/canvas_parent_api/errors/: __init__.py  canvas_error.py
src/canvas_parent_api/models/: Course.py  Observee.py  __init__.py  assignment.py  base.py  course.py  observee.py  submission.py
